// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme: (getUrls) should getUrls with 'allReflectionsHaveOwnDocument' set 1`] = `
Array [
  "modules.md",
  "README.md",
  "modules/namespacea.md",
  "modules/namespaceb.md",
  "enums/enumitema.md",
  "enums/enumitemb.md",
  "classes/classitema.md",
  "classes/classitemb.md",
  "interfaces/interfaceitema.md",
  "interfaces/interfaceitema.md#prop",
  "interfaces/interfaceitemb.md",
  "interfaces/interfaceitemb.md#prop",
  "variables/declarationitema.md",
  "variables/declarationitemb.md",
  "functions/functionitema.md",
  "functions/functionitemb.md",
]
`;

exports[`Theme: (getUrls) should getUrls with readme 'none' 1`] = `
Array [
  "README.md",
  "README.md#declarationitema",
  "README.md#declarationitemb",
  "README.md#functionitema",
  "README.md#functionitemb",
  "modules/namespacea.md",
  "modules/namespaceb.md",
  "enums/enumitema.md",
  "enums/enumitemb.md",
  "classes/classitema.md",
  "classes/classitemb.md",
  "interfaces/interfaceitema.md",
  "interfaces/interfaceitema.md#prop",
  "interfaces/interfaceitemb.md",
  "interfaces/interfaceitemb.md#prop",
]
`;

exports[`Theme: (getUrls) should getUrls' 1`] = `
Array [
  "modules.md",
  "modules.md#declarationitema",
  "modules.md#declarationitemb",
  "modules.md#functionitema",
  "modules.md#functionitemb",
  "README.md",
  "modules.md#declarationitema",
  "modules.md#declarationitemb",
  "modules.md#functionitema",
  "modules.md#functionitemb",
  "modules/namespacea.md",
  "modules/namespaceb.md",
  "enums/enumitema.md",
  "enums/enumitemb.md",
  "classes/classitema.md",
  "classes/classitemb.md",
  "interfaces/interfaceitema.md",
  "interfaces/interfaceitema.md#prop",
  "interfaces/interfaceitemb.md",
  "interfaces/interfaceitemb.md#prop",
]
`;
